# 2D-Game

./: .gitignore  CMakeLists.txt  README.md  dependent_libs.txt  index.html  test.txt
include/EngineGraphics/: Mesh.hpp  Shader.hpp  Texture.hpp  Utils.hpp  Vertex.hpp
include/EngineUtils/: FileUtils.hpp
shaders/basic/: vertex.glsl
snap/: snapcraft.yaml
src/2d-game/: Display.cpp  Display.hpp  main.cpp
src/EngineGraphics/: Mesh.cpp  Shader.cpp  Utils.cpp
src/EngineUtils/: FileUtils.cpp
test/: fileutils.cpp
